[package]
name = "tlayuda"
version = "0.1.4"
description = "A derive procedural macro for structs that adds a static method that generates instances of the struct with minimal configuration."
authors = ["mramirez <ramirezmike2@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version="1.0.61", features = ["full", "extra-traits"] }
